[gd_scene load_steps=2 format=3 uid="uid://vum6rvnoxutj"]

[ext_resource type="Script" path="res://levels/spawner/spawn_area.gd" id="1_nlop1"]

[node name="SpawnArea" type="Node2D"]
script = ExtResource("1_nlop1")

[node name="Point1" type="Marker2D" parent="."]
position = Vector2(768, 64)

[node name="Point2" type="Marker2D" parent="."]
position = Vector2(768, 128)

[node name="Point3" type="Marker2D" parent="."]
position = Vector2(768, 192)

[node name="Point4" type="Marker2D" parent="."]
position = Vector2(768, 256)

[node name="Point5" type="Marker2D" parent="."]
position = Vector2(768, 320)

[node name="TimerShort" type="Timer" parent="."]
one_shot = true

[node name="TimerMedium" type="Timer" parent="."]
one_shot = true

[node name="TimerLong" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="TimerShort" to="." method="_on_timer_short_timeout"]
[connection signal="timeout" from="TimerMedium" to="." method="_on_timer_medium_timeout"]
[connection signal="timeout" from="TimerLong" to="." method="_on_timer_long_timeout"]
